Resolve bug for the computation of the derived subgroup.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -5,11 +5,11 @@
 #PROGRAM	= TestSymmetricGroup
 #PROGRAM	= TestPermutationProduct
 #PROGRAM	= GapCanonicalImage
-PROGRAM	= GroupProperties
+#PROGRAM	= GroupProperties
 #PROGRAM	= GapSmallGeneratingSet
-#PROGRAM	= GapDerivedSubgroup
-#PROGRAM	= BenchmarkingPermutalib
+PROGRAM	= GapDerivedSubgroup
 #PROGRAM	= GapCentreSubgroup
+#PROGRAM	= BenchmarkingPermutalib
 #PROGRAM	= MinimalExample
 #PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
 #PROGRAM	= Factorize
