--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -3,7 +3,7 @@
 #PROGRAM	= GapStabilizerOnSet
 #PROGRAM	= GapRepresentativeActionOnSet
 #PROGRAM	= TestSymmetricGroup
-PROGRAM	= TestPermutation BenchmarkingPermutalib
+#PROGRAM	= TestPermutation BenchmarkingPermutalib
 #PROGRAM	= GapCanonicalImage
 #PROGRAM	= GroupProperties
 #PROGRAM	= GapSmallGeneratingSet
@@ -13,7 +13,7 @@ PROGRAM	= TestPermutation BenchmarkingPermutalib
 #PROGRAM	= BenchmarkingPermutalib
 #PROGRAM	= BenchmarkingPermutalib GapCanonicalImage
 #PROGRAM	= Factorize
-#PROGRAM	= TestSerialization
+PROGRAM	= TestSerialization
 #PROGRAM	= TestEnumerationElement
 
 OBJECTS		= $(PROGRAM:%=%.o)
@@ -26,7 +26,7 @@ OBJECTS		= $(PROGRAM:%=%.o)
 #CC		= g++ -std=c++14 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fstack-protector-all
 #CC		= g++ -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=undefined -fsanitize=bool -fsanitize=bounds -fstack-protector-all
 #CC		= g++-11 -std=c++17 -Wall -g -O2 -fsanitize=address -fsanitize=pointer-subtract -fsanitize=undefined -fsanitize=null -fsanitize=bounds -fsanitize=bounds-strict -fsanitize=alignment -fsanitize=leak -Wstrict-aliasing
-CC		= g++-11 -std=c++17 -Wall -O3
+CC		= g++ -std=c++17 -Wall -O3
 #CC		= g++ -pg -std=c++17 -Wall -g -O3
 #CC		= g++ -std=c++17 -Wall -g -O3
 #CC		= g++ -std=c++17 -Wall -Wconversion -g -O3
