Add sanity check for size in the constructor.

--- a/src_gap/Makefile
+++ b/src_gap/Makefile
@@ -39,8 +39,8 @@ CC		= g++ -std=c++17 -Wall -O3
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
-CLOCAL          =
-#CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK
+#CLOCAL          =
+CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478 -DDEBUG -DDEBUG_ADD_GEN_SCH -DDEBUG_CHANGE_STAB_CHAIN -DDEBUG_EQUALITY -DDEBUG_INV_REP -DDEBUG_STABCHAIN
 
