Add debugging functionality for the centralizer.

--- a/src_gap/Makefile_spec
+++ b/src_gap/Makefile_spec
@@ -2,7 +2,8 @@
 #PROGRAM	= TestCompilation TestSymmetricGroup TestStabilizerOnSet
 #PROGRAM	= TestStabilizerOnSet
 #PROGRAM	= TestRepresentativeActionOnSet
-PROGRAM	= GapCanonicalImage
+#PROGRAM	= GapCanonicalImage
+PROGRAM	= GapCentralizerElt
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
