--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -17,7 +17,7 @@ CC		= g++ -std=c++17 -Wall -g -O2
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
-CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK
+CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
 
 CFLAGS 		= -I$(GMP_INCDIR) -I$(BOOST_INCDIR)
