--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -22,7 +22,7 @@ CC             = g++ -std=c++17 -Wall -Wextra -g -fsanitize=address -fsanitize=p
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
-CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS
+CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS -DDEBUG_BLOCK_SYSTEM
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
 
