--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -5,7 +5,8 @@
 #PROGRAM	= GapCanonicalImage
 #PROGRAM	= GapCentralizerElt
 #PROGRAM	= SequenceSimplify
-PROGRAM	= GapAscendingChainSubgroup
+#PROGRAM	= GapAscendingChainSubgroup
+PROGRAM	= TestRightCosets
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
@@ -22,7 +23,8 @@ CC             = g++ -std=c++17 -Wall -Wextra -g -fsanitize=address -fsanitize=p
 NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
-CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS -DDEBUG_BLOCK_SYSTEM
+#CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS -DDEBUG_BLOCK_SYSTEM
+CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS -DDEBUG_NORMAL_STRUCTURE -DTIMINGS_ASCENDING_CHAINS_COSETS
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
