The whole stuff compiles.

--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -6,7 +6,8 @@
 #PROGRAM	= GapCentralizerElt
 #PROGRAM	= SequenceSimplify
 #PROGRAM	= GapAscendingChainSubgroup
-PROGRAM	= TestRightCosets TestLeftCosets
+#PROGRAM	= TestRightCosets TestLeftCosets
+PROGRAM	= GapComputeDoubleCosets
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
