Some progress in the system.

--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -3,12 +3,12 @@
 #PROGRAM	= TestStabilizerOnSet
 #PROGRAM	= TestRepresentativeActionOnSet
 #PROGRAM	= GapCanonicalImage
-PROGRAM	= GapEquivalenceOnSet
+#PROGRAM	= GapEquivalenceOnSet
 #PROGRAM	= GapCentralizerElt
 #PROGRAM	= SequenceSimplify
 #PROGRAM	= GapAscendingChainSubgroup
 #PROGRAM	= TestRightCosets TestLeftCosets
-#PROGRAM	= GapComputeDoubleCosets
+PROGRAM	= GapComputeDoubleCosets
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
@@ -25,11 +25,12 @@ OUTPUTFLAG 	= -o
 
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS -DDEBUG_BLOCK_SYSTEM
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS
-CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD
+#CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS -DDEBUG_NORMAL_STRUCTURE -DTIMINGS_ASCENDING_CHAINS_COSETS
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
+CLOCAL          = -DDEBUG_ASCENDING_CHAINS_COSETS
 
 CFLAGS 		= -I$(GMP_INCDIR) -I$(BOOST_INCDIR)
 
