--- a/src/Makefile
+++ b/src/Makefile
@@ -53,8 +53,7 @@ CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DCHECK_COSET_ENUMERATION
 
 
 
-#CFLAGS 		= -I$(BOOST_INCDIR) -I$(GMP_INCDIR) 
-CFLAGS 		= -I$(BOOST_INCDIR)
+CFLAGS 		= -I$(BOOST_INCDIR) -I$(GMP_INCDIR) 
 
 LIBS		= $(GMP_CXX_LINK) $(BOOST_LINK)
 
