Add one more control file.

--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -8,7 +8,8 @@
 #PROGRAM	= SequenceSimplify
 #PROGRAM	= GapAscendingChainSubgroup
 #PROGRAM	= TestRightCosets TestLeftCosets
-PROGRAM	= GapComputeDoubleCosets
+#PROGRAM	= GapComputeDoubleCosets
+PROGRAM	= TestComputeDoubleCosetsStabilizers
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
