Restructuration of the code.

--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -8,8 +8,8 @@
 #PROGRAM	= SequenceSimplify
 #PROGRAM	= GapAscendingChainSubgroup
 #PROGRAM	= TestRightCosets TestLeftCosets
-#PROGRAM	= GapComputeDoubleCosets
-PROGRAM	= TestComputeDoubleCosetsStabilizers
+PROGRAM	= GapComputeDoubleCosets
+#PROGRAM	= TestComputeDoubleCosetsStabilizers
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
