--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -10,8 +10,9 @@
 #PROGRAM	= TestRightCosets TestLeftCosets
 #PROGRAM	= GapComputeDoubleCosets
 #PROGRAM	= TestComputeDoubleCosets
-PROGRAM	= TestLeftCosets
+#PROGRAM	= TestLeftCosets
 #PROGRAM	= TestComputeDoubleCosetsStabilizers
+PROGRAM	= TestPreImageSubgroup
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
