--- a/src/Makefile_spec
+++ b/src/Makefile_spec
@@ -10,18 +10,18 @@
 #PROGRAM	= TestRightCosets TestLeftCosets
 #PROGRAM	= GapComputeDoubleCosets
 #PROGRAM	= TestComputeDoubleCosets
-#PROGRAM	= TestLeftCosets
+PROGRAM	= TestLeftCosets
 #PROGRAM	= TestComputeDoubleCosetsStabilizers
-PROGRAM	= TestPreImageSubgroup
+#PROGRAM	= TestPreImageSubgroup
 
 OBJECTS		= $(PROGRAM:%=%.o)
 
 #CC		= g++ -std=c++11 -Wall -Wextra -g -O2
-CC		= g++ -std=c++17 -Wall -Wextra -g -O2
+#CC		= g++ -std=c++17 -Wall -Wextra -g -O2
 #          For GCC
 #CC             = g++ -std=c++17 -Wall -Wextra -O3 -g -fsanitize=address -fsanitize=pointer-subtract -fsanitize=undefined -fsanitize=null -fsanitize=bounds -fsanitize=bounds-strict -fsanitize=alignment
 #          For CLANG
-#CC             = g++ -std=c++17 -Wall -Wextra -g -fsanitize=address -fsanitize=pointer-subtract -fsanitize=undefined -fsanitize=null -fsanitize=bounds -fsanitize=alignment
+CC             = g++ -std=c++17 -Wall -Wextra -g -fsanitize=address -fsanitize=pointer-subtract -fsanitize=undefined -fsanitize=null -fsanitize=bounds -fsanitize=alignment
 
 
 NOLINKFLAG 	= -c
@@ -34,7 +34,9 @@ OUTPUTFLAG 	= -o
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD -DDEBUG_ASCENDING_CHAINS_COSETS -DDEBUG_NORMAL_STRUCTURE -DTIMINGS_ASCENDING_CHAINS_COSETS
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DPERMUTALIB_TRACK_METHOD
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
-CLOCAL          = -DDEBUG_ASCENDING_CHAINS_COSETS
+#CLOCAL          = -DDEBUG_ASCENDING_CHAINS_COSETS -DPERMUTALIB_BLOCKING_SANITY_CHECK -DDEBUG_FACTORIZE -DDEBUG
+CLOCAL          = -DDEBUG_ASCENDING_CHAINS_COSETS -DPERMUTALIB_BLOCKING_SANITY_CHECK
+#CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DDEBUG
 
 CFLAGS 		= -I$(GMP_INCDIR) -I$(BOOST_INCDIR)
 
