Add more timings check.

--- a/src/Makefile
+++ b/src/Makefile
@@ -43,7 +43,7 @@ NOLINKFLAG 	= -c
 OUTPUTFLAG 	= -o
 
 #CLOCAL          =
-CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DCHECK_COSET_ENUMERATION -DDEBUG_PRE_IMAGE_COMPLEXITY
+CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DCHECK_COSET_ENUMERATION -DDEBUG_PRE_IMAGE_COMPLEXITY -DTIMINGS_PRE_IMAGE
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478
 #CLOCAL          = -DPERMUTALIB_BLOCKING_SANITY_CHECK -DSYNCHRONIZED_DEBUG_GAP478 -DDEBUG -DDEBUG_ADD_GEN_SCH -DDEBUG_CHANGE_STAB_CHAIN -DDEBUG_EQUALITY -DDEBUG_INV_REP -DDEBUG_STABCHAIN
 
